--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,29 @@
+/* Classes de uso geral CSS */
 /* Fonte personalizada */
 @font-face {
   font-family: 'Dancing Script';
   src: url('../font/dancing-script/DancingScript-VariableFont_wght.ttf') format('truetype');
 }
+
+/* Definição de fontes e cores para secao Sliders */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
+:root {
+    --cor-principal:#14213D;
+    --cor-secundaria:#FCA311;
+    --cor-fundo:#E5E5E5;
+    --cor-clara:#FFFFFF;
+    --cor-escura:#000000;
+
+    --fonte-primaria:'Poppins', sans-serif;
+    --fonte-secundaria:'Josefin Sans', sans-serif;
+}
+
+.secao {
+  margin-bottom: 10px;
+}
+/* Fim das classes de uso geral CSS */
 
 /* Classe utilizadas na seção Nossos Projetos */
 .nossos-projetos-imagem {
@@ -28,4 +49,72 @@
   background-color: rgba(0, 0, 0, 0.1);
   border: solid 1px rgba(0, 0, 0, 0.5);
 }
+
+.nossos-projetos {
+  padding: 10px 0px;
+}
 /* Fim das classes utilizadas na seção Nossos Projetos*/
+
+/* Início do css da seção Sliders */
+.principal {
+  height: 100vh;
+  background-image: url("../img/img7.jpg");
+  background-size: 100% 100%;
+  color: var(--cor-clara);
+}
+
+.container__caixa {
+  width: 50vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 5em;
+  font-size: 24px;
+  gap: 1em;
+}
+
+.caixa__titulo {
+  font-size: 1.5em;
+  font-family: 'Dancing Script', var(--fonte-primaria);
+  font-weight: 700;
+}
+
+.caixa__paragrafo {
+  font-family: var(--fonte-secundaria);
+  font-style: italic;
+}
+
+.caixa__botao {
+  text-decoration: none;
+  color: var(--cor-clara);
+  background-color: var(--cor-secundaria);
+  padding: 1em 2em;
+  border-radius: 16px;
+  font-family: var(--fonte-secundaria);
+  font-weight: 600;
+}
+
+.caixa__botao:hover {
+  text-decoration: none;
+  color: var(--cor-secundaria);
+  background-color: var(--cor-clara);
+  padding: 1em 2em;
+  border-radius: 16px;
+  font-family: var(--fonte-secundaria);
+  font-weight: 600;
+}
+
+.secundario{
+  background-image: url("../img/img8.jpg");
+  background-size: 100% 100%;
+  color: var(--cor-clara);
+}
+
+/* Fim do CSS da seção Sliders */
+
+/* Início do CSS do Carroseel */
+.carrossel-imagem {
+  height: 100vh;
+}
+/* Fim do CSS do Carrossel */
