--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,145 @@
   display: block;
 }
 /* Fim CSS seção Vídeo */
+
+/*Footer início*/
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;200;300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,500&display=swap');
+
+:root {
+  --color-neutral-0: #0e0c0c;
+  --color-neutral-10: #171717;
+  --color-neutral-30: #a8a29e;
+  --color-neutral-40: #f5f5f5;
+}
+
+.footer_titulo{
+  font-family: 'Playfair Display', serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  letter-spacing: 1px;
+}
+
+/* logo */
+footer {
+  width: 100%;
+  color: var(--color-neutral-40);
+}
+
+/* fundo */
+#footer_conteudo {
+  background-color: var(--color-neutral-10);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 3rem 3.5rem;
+}
+
+#footer_contatos h1 {
+  margin-bottom: 0.75rem;
+}
+
+/* redes sociais */
+#footer_redes {
+  display: flex;
+  gap: 2rem;
+  margin-top: 1.5rem;
+}
+
+#footer_redes .footer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.5rem;
+  width: 2.5rem;
+  color: var(--color-neutral-40);
+  border-radius: 50%;
+  transition: all 0.4s;
+}
+
+#footer_redes .footer_link i {
+  font-size: 1.25rem;
+}
+
+#footer_redes .footer_link:hover {
+  opacity: 0.8;
+}
+/* links */
+.footer_lista {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  list-style: none;
+}
+
+.footer_lista .footer_link{
+  color: var(--color-neutral-30);
+  transition: 0.4s;
+}
+
+.footer_lista .footer_link:hover{
+  color: #7f37c9;
+  text-decoration: none;
+}
+/* newsletter */
+#footer_inscreva-se {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+#footer_inscreva-se p {
+  color: var(--color-neutral-40);
+}
+/* input newsletter */
+#input_group {
+  display: flex;
+  align-items: center;
+  background-color: var(--color-neutral-40);
+  border-radius: 4px;
+}
+
+#input_group input{
+  all: unset;
+  padding: 0.75rem;
+  width: 100%;
+}
+
+#input_group button{
+  background-color: #7f37c9;
+  border: none;
+  color: var(--color-neutral-40);
+  padding: 0px 1.25rem;
+  font-size: 1.125rem;
+  height: 100%;
+  border-radius: 0px 4px 4px 0px;
+  cursor: pointer;
+}
+
+#input_group button:hover{
+ opacity: 0.8;
+}
+
+#footer_copyright {
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-neutral-0);
+  font-size: 0.9rem;
+  padding: 1.5rem;
+  font-weight: 100;
+}
+
+@media screen and (max-width: 768px){
+  #folder_content {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem
+  }
+
+}
+
+@media screen and (max-width: 426px){
+  #folder_content {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 3rem 2rem;
+  }
+}
+/*Footer fim*/
